--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@svgr/webpack": "^5.5.0",
     "@types/js-cookie": "^2.2.6",
     "D": "^1.0.0",
     "js-cookie": "^2.2.1",
     "next": "10.0.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-dom-confetti": "^0.2.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
